compiler/testData/readJavaBinaryClass/kotlinSignature/error/WrongTypeName3.kt
package test

import java.util.*

public open class WrongTypeName3 : Object() {
    public open fun foo(p0 : String?) : String? = ""
}
